syntax = "proto3";

option csharp_namespace = "Gateway.Web.Host.Protos.Homes";

package homes;
 
service HomeGrpc {
  rpc GetAllHomes (GetAllHomesRequest) returns (GetAllHomesResponse);
  rpc GetHomeById (GetHomeByIdRequest) returns (GetHomeByIdResponse);
  rpc CreateHome (CreateHomeRequest) returns (CreateHomeResponse);
  rpc UpdateHome (UpdateHomeRequest) returns (UpdateHomeResponse);
  rpc DeleteHome (DeleteHomeRequest) returns (DeleteHomeResponse);
}

message PHome {
  string Id = 1;
  string UserId = 2;
  string SmartHomeCode = 3;
  string Name = 4;
  string Properties = 5;
  string Address = 6;
  string TenantId = 7;
  repeated string ImagesUrl = 8;
  string CreatedAt = 9;
  string UpdatedAt = 10;
}

message GetAllHomesRequest {
  int32 SkipCount = 1;
  int32 MaxResultCount = 2;
  string UserId = 3;
}

message GetAllHomesResponse {
  int32 TotalCount = 1;
  repeated PHome Items = 2;
}

message GetHomeByIdRequest {
  string Id = 1;
}

message GetHomeByIdResponse {
  PHome Data = 1;
}

message CreateHomeRequest {
  string UserId = 1;
  string SmartHomeCode = 2;
  string Name = 3;
  string Properties = 4;
  string Address = 5; 
  string TenantId = 6;
  repeated string ImagesUrl = 7;
}

message CreateHomeResponse {
  bool Data = 1;
}

message UpdateHomeRequest {
  string Id = 1;
  string SmartHomeCode = 2;
  string Name = 3;
  string Properties = 4;
  string Address = 5;  
  repeated string ImagesUrl = 6;
}

message UpdateHomeResponse {
  bool Data = 1;
}

message DeleteHomeRequest {
  string Id = 1;
}

message DeleteHomeResponse {
  bool Data = 1;
}
